# plugins

./: Makefile  cabal.project  plugins.cabal
src/System/: Eval.hs  Plugins.hs
src/System/Eval/: Haskell.hs  Utils.hs
src/System/Plugins/: Consts.hs  Env.hs  Load.hs  LoadTypes.hs  Process.hs
testsuite/dynload/io/: TestIO.hs
testsuite/dynload/poly/: Plugin.hs
testsuite/dynload/should_fail/: Plugin.hs
testsuite/dynload/should_fail_1/: Plugin.hs
testsuite/dynload/simple/: Plugin.hs
testsuite/eval/eval1/: Main.hs
testsuite/eval/eval2/: Main.hs
testsuite/eval/eval3/: Main.hs
testsuite/eval/eval_/: Main.hs
testsuite/eval/eval_fn/: Main.hs
testsuite/eval/eval_fn1/: Main.hs  Poly.hs
testsuite/eval/unsafeidir/: Main.hs
testsuite/hier/hier1/: Plugin.hs
testsuite/hier/hier3/: Main.hs  One.hs  Two.hs
testsuite/hier/hier4/: A.hs  B.hs  C.hs  D.hs  Main.hs
testsuite/iface/null/: Main.hs
testsuite/load/io/: TestIO.hs
testsuite/load/load_0/: Test.hs
testsuite/load/loadpkg/: Main.hs
testsuite/load/plain/: TestIO.hs
testsuite/load/thiemann0/: Test.hs
testsuite/load/thiemann2/: C.hs
testsuite/load/unloadpkg/: Main.hs
testsuite/loadCLib/null/: Null.hs
testsuite/make/makeall001/: Tiny.hs
testsuite/make/null/: Null.hs
testsuite/make/o/: Plugin.hs
testsuite/make/remake001/: Main.hs
testsuite/make/remake001_should_fail/: Main.hs
testsuite/make/simple/: Tiny.hs
testsuite/makewith/global_pragma/: Plugin.hs
testsuite/makewith/merge00/: Main.hs
testsuite/makewith/mergeto0/: Main.hs
testsuite/makewith/module_name/: Main.hs
testsuite/makewith/multi_make/: Main.hs  Stub.hs
testsuite/misc/mkstemps/: Main.hs
testsuite/multi/3plugins/: Plugin1.hs  Plugin2.hs  Plugin3.hs
testsuite/objc/expression_parser/: ArithmeticExpressionParser.hs  KeyValueParser.hs  PluginEvalAux.hs
testsuite/pdynload/bayley1/: Load.hs  Plugin1.hs
(+92 files in other folders)
