cabal-version:      3.0
name:               plugins
version:            1.6.2
homepage:           https://github.com/stepcut/plugins
synopsis:           Dynamic linking for Haskell and C objects
description:
  Dynamic linking and runtime evaluation of Haskell,
  and C, including dependency chasing and package resolution.
  .
  Described in the papers:
  * /Plugging Haskell In/
  * /Dynamic Applications from the Ground Up/
  * /Dynamic Extension of Typed Functional Languages/.

category:           System
license:            BSD-3-Clause
license-file:       LICENSE
author:             Don Stewart 2004..2010
maintainer:         Jeremy Shaw <jeremy@seereason.com>
build-type:         Configure
tested-with:
  GHC =={9.6.1}

extra-source-files:
  config.guess
  config.h.in
  config.mk.in
  config.sub
  configure
  configure.ac
  install.sh
  Makefile
  testsuite/makewith/io/TestIO.conf.in
  testsuite/makewith/unsafeio/Unsafe.conf.in

library
  default-language:   Haskell2010
  exposed-modules:
    System.Eval
    System.Eval.Haskell
    System.Eval.Utils
    System.Plugins
    System.Plugins.Consts
    System.Plugins.Env
    System.Plugins.Load
    System.Plugins.LoadTypes
    System.Plugins.Make
    System.Plugins.Parser
    System.Plugins.Process
    System.Plugins.Utils

  default-extensions:
    CPP
    ForeignFunctionInterface

  ghc-options:
    -Wall -funbox-strict-fields -fno-warn-missing-signatures

  hs-source-dirs:     src
  build-depends:
    , array
    , base         >=4    && <5
    , Cabal        ^>=3.10
    , containers
    , directory
    , filepath
    , ghc          ^>=9.6
    , ghc-prim
    , haskell-src
    , process
    , random
    , split
    , ghc-paths

source-repository head
  type:     git
  location: https://github.com/stepcut/plugins
